--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: Build and Push api-music to Docker Hub
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'api-music/**'
 
